- naprawiona obsługa tokenów OAuth - poprawiona obsługa błędów z API zooma w ZoomPlatformClient - Bezpieczna obsługa webhooków z zooma - Zaktualizowane ZoomRecordingCompletedHandler (walidacja, zmieniony adres webhooków) - Lepsza konfiguracja bezpieczeństwa (cors, config pod najnowszą wersję Spring Sec) - Uzupełnione ZoomServiceImpl (dodano brakujące implementacje, poprawiona obsługa błędów, poprawione zarzadzanie tokenami)